CTT_Package/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_Text__c</fullName>
        <formula>IF(NOT(ISBLANK(MailingStreet)), MailingStreet + &apos;, &apos; , NULL) + 
IF(NOT(ISBLANK(MailingCity)), MailingCity + &apos;, &apos;, NULL) + 
IF(NOT(ISBLANK(MailingState)), MailingState + &apos;, &apos;, NULL) + 
IF(NOT(ISBLANK( MailingPostalCode )), MailingPostalCode, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlwaysTrue_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AlwaysTrue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Status__c</fullName>
        <label>Care Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unaware</fullName>
                </value>
                <value>
                    <fullName>Quarantined</fullName>
                </value>
                <value>
                    <fullName>In Hospital</fullName>
                </value>
                <value>
                    <fullName>Unable to Quarantine</fullName>
                </value>
                <value>
                    <fullName>No Quarantine</fullName>
                    <isActive>false</isActive>
                    <label>No Quarantine</label>
                </value>
                <value>
                    <fullName>No Quarantine but Track Closely</fullName>
                    <isActive>false</isActive>
                    <label>No Quarantine but Track Closely</label>
                </value>
                <value>
                    <fullName>Self-Quarantine</fullName>
                    <isActive>false</isActive>
                    <label>Self-Quarantine</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_is_a_Minor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Object checkbox</description>
        <label>Person is a Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_contact_know_about_their_exposure__c</fullName>
        <label>Does contact know about their exposure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Contact Employer Name</description>
        <formula>Account.Employer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Civil Servant</fullName>
                </value>
                <value>
                    <fullName>Contractor/Subcontractor</fullName>
                </value>
                <value>
                    <fullName>Visitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Location__c</fullName>
        <label>Home Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location1</fullName>
                </value>
                <value>
                    <fullName>Location2</fullName>
                </value>
                <value>
                    <fullName>Location3</fullName>
                </value>
                <value>
                    <fullName>Location4</fullName>
                </value>
                <value>
                    <fullName>Location5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Health_Care_Worker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Health Care Worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_High_Risk__c</fullName>
        <formula>OR(
(Is_Health_Care_Worker__c),
(Is_In_Long_Term_Care_Facility__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the person is considered high risk.</inlineHelpText>
        <label>Is High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_In_Long_Term_Care_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is in congregate setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_that_tested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab that tested</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language Picklist with global picklist value set</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Name__c</fullName>
        <description>Contact Object Next of Kin Name Text field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next of Kin Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next of Kin Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarintine_Type__c</fullName>
        <label>Quarantine Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Directed Quarantine</fullName>
                </value>
                <value>
                    <fullName>Self-Quarantine</fullName>
                </value>
                <value>
                    <fullName>No Quarantine but Track Closely</fullName>
                </value>
                <value>
                    <fullName>No Quarantine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supervisor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_Onset_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Symptom Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Result_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <label>Test Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test Pending</fullName>
                </value>
                <value>
                    <fullName>Test Result Pending</fullName>
                </value>
                <value>
                    <fullName>Test Positive</fullName>
                </value>
                <value>
                    <fullName>Test Negative</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Inconclusive</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>Detected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Taken_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Taken Date</label>
        <type>Date</type>
    </fields>
</CustomObject>